--- a/.env
+++ b/.env
@@ -16,4 +16,28 @@
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=d0099a4ccc454af6a0d8096969aa11fa
+
+#ELASTICSEARCH_URL=The full URL of the Elasticsearch service
+ELASTICSEARCH_HOST=host.docker.internal
+ELASTICSEARCH_PORT=9200
+ELASTICSEARCH_SCHEME=http
 ###< symfony/framework-bundle ###
+DB_NAME=globosphere_db
+DB_ROOT_PASSWORD=ausgfavbgkjvb
+MYSQL_USER=globosphere
+MYSQL_PASSWORD=password
+DB_PORT=3306
+DB_DATA_PATH=C:\Users\john\projects\globosphere\dbdata
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+DATABASE_URL="mysql://root:ausgfavbgkjvb@host.docker.internal:3309/globosphere_db?serverVersion=5.7"
+#DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+###< doctrine/doctrine-bundle ###
+
+###> friendsofsymfony/elastica-bundle ###
+ELASTICSEARCH_URL=http://localhost:9200/
+###< friendsofsymfony/elastica-bundle ###
