--- a/.env
+++ b/.env
@@ -39,5 +39,5 @@ DATABASE_URL="mysql://root:ausgfavbgkjvb@host.docker.internal:3309/globosphere_d
 ###< doctrine/doctrine-bundle ###
 
 ###> friendsofsymfony/elastica-bundle ###
-ELASTICSEARCH_URL=http://localhost:9200/
+ELASTICSEARCH_URL=host.docker.internal:9200/
 ###< friendsofsymfony/elastica-bundle ###
