--- a/config/services.yaml
+++ b/config/services.yaml
@@ -24,4 +24,6 @@ services:
     App\Controller\SearchController:
         tags: [ controller.service_arguments ]
         public: true
-        arguments: ['@fos_elastica.manager']
+        arguments:
+            - '@fos_elastica.manager'
+
